power: Fix impossible to hit error paths

guint is always positive, so "value < 0" will never catch errors,
and might cause crashers.

https://bugzilla.gnome.org/show_bug.cgi?id=657364